Employee_EmployeeDetails _Relation

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AspDotNetCoreDB": "Server=DESKTOP-3FHN5HM\\SQLEXPRESS; Database=AspDotNetCoreDB; User ID=sa; Password=B@ngl@d3sh; Trusted_Connection=True;"
+    "AspDotNetCoreDB": "Server=DESKTOP-Q88F3LV\\SQLEXPRESS; Database=AspDotNetCoreDB; User ID=sa; Password=B@ngl@d3sh; Trusted_Connection=True;"
   },
     "Logging": {
       "LogLevel": {
