--- a/AspDotNetCore.DataAccess/AspDotNetCore.DataAccess.csproj
+++ b/AspDotNetCore.DataAccess/AspDotNetCore.DataAccess.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <!--<TargetFramework>net5.0</TargetFramework>-->
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,5 +17,4 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
 </Project>
