--- a/AspDotNetCore.Services/AspDotNetCore.Services.csproj
+++ b/AspDotNetCore.Services/AspDotNetCore.Services.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <!--<TargetFramework>net5.0</TargetFramework>-->
+
   </PropertyGroup>
 
   <ItemGroup>
